--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "type": "module",
-  "name": "frame1",
-  "version": "1.0.2",
-  "description": "Nodejs Frame Project",
+  "name": "dds",
+  "version": "1.0.0",
+  "description": "DeVent Design System",
   "main": "app.js",
   "scripts": {
-    "test": "mocha",
     "start": "node app.js"
   },
   "repository": {
@@ -19,17 +18,9 @@
   },
   "homepage": "https://github.com/Team-DeVent/devent-frame#readme",
   "dependencies": {
-    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
     "cookie-parser": "^1.4.6",
-    "dayjs": "^1.10.7",
     "express": "^4.17.2",
-    "express-handlebars": "^6.0.2",
-    "jsonwebtoken": "^8.5.1",
-    "mysql2": "^2.3.3",
-    "sanitize-html": "^2.6.1"
-  },
-  "devDependencies": {
-    "mocha": "^9.2.0"
+    "express-handlebars": "^6.0.2"
   }
 }
