--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "description": "DeVent Design System",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "bundle:development": "webpack --mode=development",
+    "bundle:production": "webpack --mode=production"
   },
   "repository": {
     "type": "git",
@@ -22,5 +24,9 @@
     "cookie-parser": "^1.4.6",
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2"
+  },
+  "devDependencies": {
+    "webpack": "^5.69.1",
+    "webpack-cli": "^4.9.2"
   }
 }
