--- a/package.json
+++ b/package.json
@@ -26,6 +26,11 @@
     "express-handlebars": "^6.0.2"
   },
   "devDependencies": {
+    "css-loader": "^6.6.0",
+    "mini-css-extract-plugin": "^2.5.3",
+    "sass": "^1.49.9",
+    "sass-loader": "^12.6.0",
+    "style-loader": "^3.3.1",
     "webpack": "^5.69.1",
     "webpack-cli": "^4.9.2"
   }
