chore: npm publish
+ npm CDN 배포

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "type": "module",
-  "name": "dds",
+  "name": "deventds",
   "version": "1.0.0",
   "description": "DeVent Design System, bootstrap based design system for a sense of unity.",
   "homepage": "https://github.com/Team-DeVent/devent-designsystem",
