--- a/package.json
+++ b/package.json
@@ -22,6 +22,13 @@
   "files": [
     "dist"
   ],
+  "keywords": [
+    "web",
+    "bootstrap",
+    "webcomponents",
+    "sass",
+    "designsystem"
+  ],
   "dependencies": {
     "body-parser": "^1.19.1",
     "cookie-parser": "^1.4.6",
